# forecast

./: .gitignore  Makefile  alembic.ini  data.csv  docker-compose.dev.yml  main.py  postgres.Dockerfile  pyproject.toml  test.py
alembic/: env.py
alembic/versions/: 07256fda7937_added_basic_data_structure.py  2c38b9fb6fbf_.py  32e339f8fc54_.py  33ef507f9872_whatever.py  3b41d8314807_added_data_source_field.py  44ecff040ed6_made_ascii_name_not_unique_source_list_.py  4cd6a83aa6ad_added_hourly_weather.py  541bec285a55_.py  67d1b70e398f_.py  8995a8143860_.py  8a7265a1b493_initial.py  8ac30a6ef6e5_added_basic_data_structure.py  9e1f77256db5_added_indecies.py  acf4bdd9fdb3_.py  b4aa93353c66_.py  bd4393bf0594_tweaked_the_models.py  d544d439b854_remove_unique_from_name_ascii.py  dcaf31444ebf_.py  e3a5b4c20f5e_make_city_name_unique.py  ed26c75307b8_.py  eda12587c820_.py
config/: example.yaml  test.yaml
forecast/: __main__.py  api_client_session.py  collector.py  config.py  logging.py  parse_args.py  populate_cities.py
forecast-frontend/: package.json  pnpm-lock.yaml
forecast-frontend/src/app/: layout.tsx  page.tsx
forecast-frontend/src/components/: DataView.tsx  Header.tsx  SearchBar.tsx  header.tsx
forecast-frontend/src/schema/: index.ts
forecast/api/: __main__.py
forecast/api/dependencies/: __init__.py  cities_provider.py  closest_city_provider.py  db_session.py  prediction_model.py
forecast/api/models/: healthcheck.py  weather.py
forecast/api/routes/: __init__.py  cities.py  weather.py
forecast/client_session_classes/: __init__.py  api_client_session.py  extended_client_session.py
forecast/db/: connect.py
forecast/db/models/: __init__.py  city.py  historical_hourly_weather.py  location.py  weather.py  weather_journal.py
forecast/enums/: __init__.py
forecast/models/: __init__.py  city.py  historical_hourly_weather.py  hourly_weather.py  location.py
forecast/providers/: __init__.py  meteostat.py  open_meteo.py  open_weather_map.py  tomorrow.py  visual_crossing.py  weather_bit.py  world_weather_online.py
forecast/providers/base/: __init__.py  provider.py  requestor.py
forecast/providers/enums/: __init__.py  resolution.py
forecast/providers/meteostat/: __init__.py
forecast/providers/models/: __init__.py  weather.py
forecast/providers/schema/: meteostat.py  open_meteo.py  open_weather_map.py  tomorrow.py  visual_crossing.py  weather_bit.py  world_weather_online.py
forecast/requestor/: __init__.py  requestor.py
forecast/services/: __init__.py  base.py  collector.py  open_meteo.py  open_weather_map.py  openmeteo.py  openweathermap.py  populate_cities.py  tomorrow.py  visual_crossing.py  visualcrossing.py  weather_bit.py  weatherbit.py
forecast/utils/: __init__.py  format_path.py  pascal_case_to_snake_case.py
lib/caching/: __init__.py  lru_cache.py
lib/config/: __init__.py
lib/fs_utils/: __init__.py  validate_path.py
lib/logging/: __init__.py
models/: __init__.py
scripts/: format_and_lint.sh  generate_schema.py
services/: __init__.py  base.py  openweathermap.py  visualcrossing.py  weatherbit.py
services/base/: base.py  provider.py
tests/: config.py  conftest.py
tests/providers/: test_providers.py
tests/services/: test_services.py  test_weatherbit.py
(+14 files in other folders)
