[tool.poetry]
name = "forecast"
version = "0.1.0"
description = ""
authors = ["Yevhenii Konyshev <evgeniy.konyshev2007@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
aiohttp = "^3.9.1"
pandas = "^2.2.0"
numpy = "^1.26.3"
pydantic = "^2.5.3"
pydantic-extra-types = "^2.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
