[tool.poetry]
name = "forecast"
version = "0.1.0"
description = ""
authors = ["Yevhenii Konyshev <evgeniy.konyshev2007@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
aiohttp = {extras = ["speedups"], version = "^3.9.1"}
pandas = "^2.2.0"
numpy = "^1.26.3"
pydantic = "^2.5.3"
pydantic-extra-types = "^2.4.1"
uvloop = "^0.19.0"
pyyaml = "^6.0.1"
sqlalchemy = {extras = ["asyncio", "asyncpg"], version = "^2.0.25"}
alembic = "^1.13.1"
asyncpg = "^0.29.0"
aiofiles = "^23.2.1"
orjson = "^3.9.12"
geopy = "^2.4.1"
scipy = "^1.12.0"
pyright = "^1.1.349"
pyarrow = "^15.0.0"

[tool.poetry.group.dev.dependencies]
isort = "*"
pyright = "^1"
mypy = "^1"
ruff = "*"
flake8 = "^7.0.0"
pytest-asyncio = "^0.23.3"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"


[tool.poetry.group.codegen.dependencies]
datamodel-code-generator = {extras = ["http"], version = "^0.25.2"}

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.isort]
profile = "black"

[tool.ruff]
select = ['E', 'F', 'W', 'I', 'N', 'UP', 'E', 'W']
ignore = []

[tool.ruff.format]
quote-style = "single"

[tool.pyright]
typeCheckingMode = "strict"
useLibraryCodeForTypes = true

reportMissingImports = true
reportMissingTypeStubs = false

reportUnknownArgumentType = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownLambdaType = false

strictListInference = true
stringDictionaryInference = true
strictSetInference = true
reportUnusedImport = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
